--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
   <footer class="footer">
     <p class="footer__copyright">© 2021. Tatyana Sidubaeva</p>
   </footer>
+  <section class="popup">
+    <div class="popup__overlay"></div>
+    <div class="popup__content">
+      <button class="popup__close-button"></button>
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <form class="popup__form">
+        <input class="popup__name" type="text" value="Жак-Ив Кусто">
+        <input class="popup__job" type="text" value="Исследователь океана">
+        <input class="popup__save-button" type="submit" value="Сохранить">
+      </form>
+    </div>
+  </section>
   <script src="./scripts/script.js"></script>
 </body>
 </html>
