добавление файла js

--- a/index.html
+++ b/index.html
@@ -24,42 +24,42 @@
     <section class="elements">
       <ul class="elements__list">
         <li class="element">
-          <img class="element__image" src="./images/card-karachaevsk.jpg" alt="картинка замка в Карачаевске">
+          <img class="element__image" src="./images/card-Karachaevsk.jpg" alt="картинка замка в Карачаевске">
           <div class="element__container">
             <h2 class="element__title">Карачаевск</h2>
             <button class="element__like-button"></button>
           </div>
         </li>
         <li class="element">
-          <img class="element__image" src="./images/card-elbrus.jpg" alt="картинка горы Эльбрус">
+          <img class="element__image" src="./images/card-Elbrus.jpg" alt="картинка горы Эльбрус">
           <div class="element__container">
             <h2 class="element__title">Гора Эльбрус</h2>
             <button class="element__like-button"></button>
           </div>
         </li>
         <li class="element">
-          <img class="element__image" src="./images/card-dombaj.jpg" alt="картинка гор на Домбае">
+          <img class="element__image" src="./images/card-Dombaj.jpg" alt="картинка гор на Домбае">
           <div class="element__container">
             <h2 class="element__title">Домбай</h2>
             <button class="element__like-button"></button>
           </div>
         </li>
         <li class="element">
-          <img class="element__image" src="./images/card-karachaevsk.jpg" alt="картинка замка в Карачаевске">
+          <img class="element__image" src="./images/card-Karachaevsk.jpg" alt="картинка замка в Карачаевске">
           <div class="element__container">
             <h2 class="element__title">Карачаево-Черкесия</h2>
             <button class="element__like-button"></button>
           </div>
         </li>
         <li class="element">
-          <img class="element__image" src="./images/card-elbrus.jpg" alt="картинка горы Эльбрус">
+          <img class="element__image" src="./images/card-Elbrus.jpg" alt="картинка горы Эльбрус">
           <div class="element__container">
             <h2 class="element__title">Гора Эльбрус</h2>
             <button class="element__like-button"></button>
           </div>
         </li>
         <li class="element">
-          <img class="element__image" src="./images/card-dombaj.jpg" alt="картинка гор на Домбае">
+          <img class="element__image" src="./images/card-Dombaj.jpg" alt="картинка гор на Домбае">
           <div class="element__container">
             <h2 class="element__title">Домбай</h2>
             <button class="element__like-button"></button>
