--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <img class="profile__avatar" src="./images/avatar.jpg" alt="аватарка Ж.И.Кусто">
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
-        <button class="profile__edit-button"></button>
+        <button type="button" class="profile__edit-button"></button>
         <p class="profile__job">Исследователь океана</p>
       </div>
-      <button class="profile__add-button"></button>
+      <button type="button" class="profile__add-button"></button>
     </section>
     <section class="elements">
       <ul class="elements__list">
@@ -27,42 +27,42 @@
           <img class="element__image" src="./images/card-Karachaevsk.jpg" alt="картинка замка в Карачаевске">
           <div class="element__container">
             <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like-button"></button>
+            <button type="button" class="element__like-button"></button>
           </div>
         </li>
         <li class="element">
           <img class="element__image" src="./images/card-Elbrus.jpg" alt="картинка горы Эльбрус">
           <div class="element__container">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like-button"></button>
+            <button type="button" class="element__like-button"></button>
           </div>
         </li>
         <li class="element">
           <img class="element__image" src="./images/card-Dombaj.jpg" alt="картинка гор на Домбае">
           <div class="element__container">
             <h2 class="element__title">Домбай</h2>
-            <button class="element__like-button"></button>
+            <button type="button" class="element__like-button"></button>
           </div>
         </li>
         <li class="element">
           <img class="element__image" src="./images/card-Karachaevsk.jpg" alt="картинка замка в Карачаевске">
           <div class="element__container">
             <h2 class="element__title">Карачаево-Черкесия</h2>
-            <button class="element__like-button"></button>
+            <button type="button" class="element__like-button"></button>
           </div>
         </li>
         <li class="element">
           <img class="element__image" src="./images/card-Elbrus.jpg" alt="картинка горы Эльбрус">
           <div class="element__container">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like-button"></button>
+            <button type="button" class="element__like-button"></button>
           </div>
         </li>
         <li class="element">
           <img class="element__image" src="./images/card-Dombaj.jpg" alt="картинка гор на Домбае">
           <div class="element__container">
             <h2 class="element__title">Домбай</h2>
-            <button class="element__like-button"></button>
+            <button type="button" class="element__like-button"></button>
           </div>
         </li>
       </ul>
@@ -74,12 +74,12 @@
   <section class="popup">
     <div class="popup__overlay"></div>
     <div class="popup__content">
-      <button class="popup__close-button"></button>
+      <button type="button" class="popup__close-button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form">
         <input class="popup__name" type="text" value="Жак-Ив Кусто">
         <input class="popup__job" type="text" value="Исследователь океана">
-        <input class="popup__save-button" type="submit" value="Сохранить">
+        <button type="submit" class="popup__save-button" value="Сохранить">
       </form>
     </div>
   </section>
