--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
   <footer class="footer">
     <p class="footer__copyright">© 2021. Tatyana Sidubaeva</p>
   </footer>
-  <section class="popup">
+  <div class="popup">
     <div class="popup__overlay"></div>
     <div class="popup__content">
       <button type="button" class="popup__close-button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form">
-        <input class="popup__name" type="text" value="Жак-Ив Кусто">
-        <input class="popup__job" type="text" value="Исследователь океана">
+      <form class="popup__form" name="editform">
+        <input class="popup__name" type="text" name="name" value="Жак-Ив Кусто">
+        <input class="popup__job" type="text" name="job" value="Исследователь океана">
         <button type="submit" class="popup__save-button" value="Сохранить">
       </form>
     </div>
-  </section>
+  </div>
   <script src="./scripts/script.js"></script>
 </body>
 </html>
