--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
       <button type="button" class="popup__close-button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form" name="editform">
-        <input class="popup__name" type="text" name="name" value="Жак-Ив Кусто">
-        <input class="popup__job" type="text" name="job" value="Исследователь океана">
-        <button type="submit" class="popup__save-button" value="Сохранить">
+        <input class="popup__input popup__input_name" type="text" name="name" value="Жак-Ив Кусто">
+        <input class="popup__input popup__input_job" type="text" name="job" value="Исследователь океана">
+        <button type="submit" class="popup__save-button">Сохранить</button>
       </form>
     </div>
   </div>
