fix: 1) к profile__name и profile__job применимо свойство text-overflow: ellipsis; 2) исправлены названия для контейнера для карточек и для самих карточек

--- a/index.html
+++ b/index.html
@@ -21,48 +21,48 @@
       </div>
       <button type="button" class="profile__add-button"></button>
     </section>
-    <section class="elements">
-      <ul class="elements__list">
-        <li class="element">
-          <img class="element__image" src="./images/card-Karachaevsk.jpg" alt="картинка замка в Карачаевске">
-          <div class="element__container">
-            <h2 class="element__title">Карачаевск</h2>
-            <button type="button" class="element__like-button"></button>
+    <section class="cards">
+      <ul class="cards__list">
+        <li class="card">
+          <img class="card__image" src="./images/card-Karachaevsk.jpg" alt="картинка замка в Карачаевске">
+          <div class="card__container">
+            <h2 class="card__title">Карачаевск</h2>
+            <button type="button" class="card__like-button"></button>
           </div>
         </li>
-        <li class="element">
-          <img class="element__image" src="./images/card-Elbrus.jpg" alt="картинка горы Эльбрус">
-          <div class="element__container">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button type="button" class="element__like-button"></button>
+        <li class="card">
+          <img class="card__image" src="./images/card-Elbrus.jpg" alt="картинка горы Эльбрус">
+          <div class="card__container">
+            <h2 class="card__title">Гора Эльбрус</h2>
+            <button type="button" class="card__like-button"></button>
           </div>
         </li>
-        <li class="element">
-          <img class="element__image" src="./images/card-Dombaj.jpg" alt="картинка гор на Домбае">
-          <div class="element__container">
-            <h2 class="element__title">Домбай</h2>
-            <button type="button" class="element__like-button"></button>
+        <li class="card">
+          <img class="card__image" src="./images/card-Dombaj.jpg" alt="картинка гор на Домбае">
+          <div class="card__container">
+            <h2 class="card__title">Домбай</h2>
+            <button type="button" class="card__like-button"></button>
           </div>
         </li>
-        <li class="element">
-          <img class="element__image" src="./images/card-Karachaevsk.jpg" alt="картинка замка в Карачаевске">
-          <div class="element__container">
-            <h2 class="element__title">Карачаево-Черкесия</h2>
-            <button type="button" class="element__like-button"></button>
+        <li class="card">
+          <img class="card__image" src="./images/card-Karachaevsk.jpg" alt="картинка замка в Карачаевске">
+          <div class="card__container">
+            <h2 class="card__title">Карачаево-Черкесия</h2>
+            <button type="button" class="card__like-button"></button>
           </div>
         </li>
-        <li class="element">
-          <img class="element__image" src="./images/card-Elbrus.jpg" alt="картинка горы Эльбрус">
-          <div class="element__container">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button type="button" class="element__like-button"></button>
+        <li class="card">
+          <img class="card__image" src="./images/card-Elbrus.jpg" alt="картинка горы Эльбрус">
+          <div class="card__container">
+            <h2 class="card__title">Гора Эльбрус</h2>
+            <button type="button" class="card__like-button"></button>
           </div>
         </li>
-        <li class="element">
-          <img class="element__image" src="./images/card-Dombaj.jpg" alt="картинка гор на Домбае">
-          <div class="element__container">
-            <h2 class="element__title">Домбай</h2>
-            <button type="button" class="element__like-button"></button>
+        <li class="card">
+          <img class="card__image" src="./images/card-Dombaj.jpg" alt="картинка гор на Домбае">
+          <div class="card__container">
+            <h2 class="card__title">Домбай</h2>
+            <button type="button" class="card__like-button"></button>
           </div>
         </li>
       </ul>
