--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
   <main class="content">
     <section class="profile">
-      <img class="profile__avatar" src="./images/avatar.jpg" alt="аватарка Ж.И.Кусто">
+      <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар пользователя">
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
         <button type="button" class="profile__edit-button"></button>
@@ -71,15 +71,27 @@
   <footer class="footer">
     <p class="footer__copyright">© 2021. Tatyana Sidubaeva</p>
   </footer>
-  <div class="popup">
+  <div class="popup" id="edit-profile">
     <div class="popup__overlay"></div>
     <div class="popup__content">
       <button type="button" class="popup__close-button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form" name="editform">
-        <input class="popup__input popup__input_type_name" type="text" name="name" value="Жак-Ив Кусто">
-        <input class="popup__input popup__input_type_job" type="text" name="job" value="Исследователь океана">
-        <button type="submit" class="popup__save-button">Сохранить</button>
+      <form class="popup__form" name="editprofileform">
+        <input class="popup__input popup__input_type_name" type="text" name="name" placeholder="Жак-Ив Кусто">
+        <input class="popup__input popup__input_type_job" type="text" name="job" placeholder="Исследователь океана">
+        <button type="submit" class="popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
+  <div class="popup" id="add-card">
+    <div class="popup__overlay"></div>
+    <div class="popup__content">
+      <button type="button" class="popup__close-button"></button>
+      <h2 class="popup__title">Новое место</h2>
+      <form class="popup__form" name="addcardform">
+        <input class="popup__input popup__input_type_title" type="text" name="title" placeholder="Название">
+        <input class="popup__input popup__input_type_link" type="text" name="link" placeholder="Ссылка на картинку">
+        <button type="submit" class="popup__button">Создать</button>
       </form>
     </div>
   </div>
