--- a/index.html
+++ b/index.html
@@ -23,48 +23,7 @@
     </section>
     <section class="cards">
       <ul class="cards__list">
-        <li class="card">
-          <img class="card__image" src="./images/card-Karachaevsk.jpg" alt="картинка замка в Карачаевске">
-          <div class="card__container">
-            <h2 class="card__title">Карачаевск</h2>
-            <button type="button" class="card__like-button"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img class="card__image" src="./images/card-Elbrus.jpg" alt="картинка горы Эльбрус">
-          <div class="card__container">
-            <h2 class="card__title">Гора Эльбрус</h2>
-            <button type="button" class="card__like-button"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img class="card__image" src="./images/card-Dombaj.jpg" alt="картинка гор на Домбае">
-          <div class="card__container">
-            <h2 class="card__title">Домбай</h2>
-            <button type="button" class="card__like-button"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img class="card__image" src="./images/card-Karachaevsk.jpg" alt="картинка замка в Карачаевске">
-          <div class="card__container">
-            <h2 class="card__title">Карачаево-Черкесия</h2>
-            <button type="button" class="card__like-button"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img class="card__image" src="./images/card-Elbrus.jpg" alt="картинка горы Эльбрус">
-          <div class="card__container">
-            <h2 class="card__title">Гора Эльбрус</h2>
-            <button type="button" class="card__like-button"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img class="card__image" src="./images/card-Dombaj.jpg" alt="картинка гор на Домбае">
-          <div class="card__container">
-            <h2 class="card__title">Домбай</h2>
-            <button type="button" class="card__like-button"></button>
-          </div>
-        </li>
+        
       </ul>
     </section>
   </main>
@@ -102,6 +61,15 @@
       <figcaption class="popup__image-caption"></figcaption>
     </figure>
   </div>
+  <template id=card>
+    <li class="card">
+      <img class="card__image">
+      <div class="card__container">
+        <h2 class="card__title"></h2>
+        <button type="button" class="card__like-button"></button>
+      </div>
+    </li>
+  </template>  
   <script src="./scripts/script.js"></script>
 </body>
 </html>
