--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <form class="popup__form" name="editprofileform">
         <input class="popup__input popup__input_type_name" type="text" name="name" placeholder="Жак-Ив Кусто">
         <input class="popup__input popup__input_type_job" type="text" name="job" placeholder="Исследователь океана">
-        <button type="submit" class="popup__button">Сохранить</button>
+        <button type="submit" class="popup__save-button">Сохранить</button>
       </form>
     </div>
   </div>
@@ -50,20 +50,24 @@
       <form class="popup__form" name="addcardform">
         <input class="popup__input popup__input_type_title" type="text" name="title" placeholder="Название">
         <input class="popup__input popup__input_type_link" type="text" name="link" placeholder="Ссылка на картинку">
-        <button type="submit" class="popup__button">Создать</button>
+        <button type="submit" class="popup__save-button">Создать</button>
       </form>
     </div>
   </div>
   <div class="popup popup_type_view-card" id="view-card">
-    <button type="button" class="popup__close-button"></button>
-    <figure class="popup__view-card">
-      <img class="popup__image">
-      <figcaption class="popup__image-caption"></figcaption>
-    </figure>
+    <div class="popup__overlay"></div>
+    <div class="popup__content-image">
+      <button type="button" class="popup__close-button"></button>
+      <figure class="popup__view-card">
+        <img class="popup__image">
+        <figcaption class="popup__image-caption"></figcaption>
+      </figure>
+    </div>
   </div>
   <template id=card>
     <li class="card">
       <img class="card__image">
+      <button type="button" class="card__delete-button"></button>
       <div class="card__container">
         <h2 class="card__title"></h2>
         <button type="button" class="card__like-button"></button>
