fix: для popup_image добавлены атрибуты alt, src

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="popup__content-image">
       <button type="button" class="popup__close-button"></button>
       <figure class="popup__view-card">
-        <img class="popup__image">
+        <img class="popup__image" alt="#" src="#">
         <figcaption class="popup__image-caption"></figcaption>
       </figure>
     </div>
