--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="author" content="Tatyana Sidubaeva">
   <link rel="stylesheet" href="pages/index.css">
   <title>Место</title>
+  <script type="module" src="./scripts/script.js"></script>
 </head>
 <body class="page">
   <header class="header">
@@ -77,9 +78,6 @@
         <button type="button" class="card__like-button"></button>
       </div>
     </li>
-  </template>  
-  <script src="./scripts/constants.js"></script>
-  <script src="./scripts/script.js"></script>
-  <script src="./scripts/validate.js"></script>
+  </template>
 </body>
 </html>
