удаление ненужного/неиспользуемого кода

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Tatyana Sidubaeva">
   <link rel="stylesheet" href="pages/index.css">
   <title>Место</title>
-  <script type="module" src="./scripts/script.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </head>
 <body class="page">
   <header class="header">
