--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Tatyana Sidubaeva">
-  <link rel="stylesheet" href="pages/index.css">
   <title>Место</title>
-  <script type="module" src="./pages/index.js"></script>
 </head>
 <body class="page">
   <header class="header">
-    <img class="logo" src="./images/logo.svg" alt="логотип Место Russia">
+    <img class="logo" src="<%=require('./images/logo.svg')%>" alt="логотип Место Russia">
   </header>
   <main class="content">
     <section class="profile">
-      <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар пользователя">
+      <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="аватар пользователя">
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
         <button type="button" class="profile__edit-button"></button>
