доработка сборки проекта webpack

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
 </head>
 <body class="page">
   <header class="header">
-    <img class="logo" src="<%=require('./images/logo.svg')%>" alt="логотип Место Russia">
+    <img src="<%=require('./images/logo.svg')%>" alt="логотип проекта" class="logo">
   </header>
   <main class="content">
     <section class="profile">
-      <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="аватар пользователя">
+      <img src="<%=require('./images/avatar.jpg')%>" alt="аватар пользователя" class="profile__avatar">
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
         <button type="button" class="profile__edit-button"></button>
