--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,13 @@
   <main class="content">
     <section class="profile">
       <div class="profile__avatar-container">
-        <img src="<%=require('./images/avatar.jpg')%>" alt="аватар пользователя" class="profile__avatar">
+        <img src=" " alt="аватар пользователя" class="profile__avatar">
         <img src="<%=require('./images/editAvatarButton.svg')%>" alt="иконка редактирования аватарки" class="profile__edit-avatar-button"/>
       </div>
       <div class="profile__info">
-        <h1 class="profile__name">Жак-Ив Кусто</h1>
+        <h1 class="profile__name"></h1>
         <button type="button" class="profile__edit-button"></button>
-        <p class="profile__job">Исследователь океана</p>
+        <p class="profile__job"></p>
       </div>
       <button type="button" class="profile__add-button"></button>
     </section>
